force-app/PackagingWizard/main/core/objects/SalesforceOrgCredentials__c/SalesforceOrgCredentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Salesforce Org Credentials</label>
</CustomObject>