force-app/PackagingWizard/main/core/objects/SalesforceOrgCredentials__c/fields/IsSandbox__c.field-meta.xml
<CustomField>
    <fullName>IsSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>