force-app/PackagingWizard/main/core/objects/SalesforceOrgCredentials__c/fields/SecurityToken__c.field-meta.xml
<CustomField>
    <fullName>SecurityToken__c</fullName>
    <label>Security Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>