force-app/PackagingWizard/main/core/objects/SalesforceOrgCredentials__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>